--- a/game.html
+++ b/game.html
@@ -6,8 +6,15 @@
   <title>Document</title>
 </head>
 <body>
-
-  테스트 메시지 출력
-  
+  <div class="container">
+    <div class="score">
+      <p>점수: <span id="score">0</span></p>
+    </div>
+    <div class="playtime">
+      <p>제한시간: <span id="playtime">5</span>초</p>
+    </div>
+    <div class="dot-target"></div>
+    <button id="play">플레이</button>
+  </div>
 </body>
 </html>
